stop code from jumping on the first comment

--- a/src/styles/components/_tab.scss
+++ b/src/styles/components/_tab.scss
@@ -66,7 +66,7 @@
     }
 
     &__file-name {
-      height: 16px;
+      height: 22px;
     }
     &__comment-count {
       @include badgeFormat($mid-grey, black);
